  djGrr. There are reservations regarding the security of this, but for most
   purposes it should be okay. Cryptographically minded people may comment. 
  This may also be used to allow remote included opers with SSL certificate
  fingerprints as we cannot as of yet remote include client certificates
  (#0002832, suggested by Stealth)
  Example use:
  $ openssl x509 -in cert.pem -noout -sha1 -fingerprint
   (where cert.pem is the oper's/server's/etc SSL client certificate)
  SHA1 Fingerprint=FA:A6:A3:42:95:34:15:68:26:35:40:18:8D:50:68:D4:15:C8:12:9E
	
 translating into this auth block:
 password "FA:A6:A3:42:95:34:15:68:26:35:40:18:8D:50:68:D4:15:C8:12:9E" { sslcertfingerprint-sha1; };
 (the auth code is case sensitive).

 If anyone is interested in making a module for SSL client certificate
 authentication for services, you can probably use the code in here to do it
 quite simple.
 .. please mind any errors, it's been years since I (Stskeeps) last committed to here :)
- Patch to remove lusers.c and change from bzero to memset in ircd.c
  by w00t
- Patch to remove curses leftover (I am going to assume SIGWINCH isn't a
  problem) by w00t 
- Fixed #0003002 reported by DelGurth, fixed by WolfSage regarding trailing \'s in
MOTDs 
- Fixed #0003171 reported by danieldg (typo)
- #0003118 reported by vonitsanet (typo in ADDOMOTD), fixed by WolfSage
- #0003272 reported and fixed by WolfSage (addmotd, addomotd in help.conf)
- #0003274 reported by Stealth regarding using actual nick and not given
  nick in SAPART
- #0002842 reported by Zell, fixed by WolfSage regarding glitch in rehash
  output glitch
- #0003159 reported by aegis and Bock, regarding typos in documentation
- #0002560 reported and patched by w00t, regarding a typo in /SAMODE
- #0002844 reported by RandomNumber: Spamfilter bawks on capitalizing actions 
- #0002404 reported by White_Magic, patched by w00t, removing /addline
  (which the bug report wasnt about)
- #0002420 reported by KnuX fixed by .. not sure